--- a/src/pages/signup.css
+++ b/src/pages/signup.css
@@ -1,83 +1,77 @@
 .container {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+
     font-size: 24px;
 }
 
 .tips-container {
+    width: 70%;
     display: flex;
     align-items: flex-start;
-    width: 100%;
 }
 
-.tips-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 60%;
-}
 
-.tip-image {
+.tips-image {
     width: 100%;
     height: auto;
-
 }
 
-.form-container {
-    width: 40%;
-    margin: 3%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
 .brand {
+    margin-top: 20px;
     width: 150px;
     margin-bottom: 20px;
     margin-left: auto;
 }
 
 .title {
-    margin-bottom: 20px;
+    margin-right: auto;
+    margin-top: 10%;
     font-size: 36px;
 }
 
-.Inputform {
-    width: flex;
-    height: 60px;
-    border-radius: 20px;
-    background-color: var(--color-gray);
-    align-self: stretch;
-    border-radius: var(--br-mini);
+.form-container {
+    width: 40%;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    outline-color: none;
-    padding: var(--padding-mid) var(--padding-3xl);
-    box-sizing: border-box;
-    font-size: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
 
 .normalbutton {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: rgb(9, 180, 57);
-    color: white;
+    background-color: rgb(29, 191, 75);
+    border-radius: 20px;
     cursor: pointer;
+    height: 60px;
     font-size: 24px;
-    margin-top: 10px;
+    color: white;
+    width: flex;
+    margin-bottom: 20px;
 }
 
 .normalbutton:hover {
     background-color: rgb(6, 102, 33);
 }
+
+.form-container form {
+
+    width: 100%;
+    font-size: 36px;
+}
+
+.Inputform {
+    width: 100%;
+    margin-bottom: 15px;
+    height: 60px;
+    border-radius: 20px;
+    background-color: rgb(237, 236, 236);
+    outline-color: none;
+    font-size: 24px;
+}
+
+
+
 
 .logo {
     width: 100px;
@@ -88,16 +82,19 @@
     display: flex;
     position: relative;
     object-fit: cover;
-    margin-top: 70%;
+    margin-top: 50%;
 }
+
 
 .go-signup {
     cursor: pointer;
-    color: #007bff;
+    width: 400px;
+    align-items: center;
+
 }
 
 .go-signup:hover {
-    text-decoration: underline;
+    color: rgb(29, 191, 75);
 }
 
 @media (max-width: 768px) {
@@ -105,8 +102,4 @@
         display: none;
     }
 
-    .form-container {
-        width: 100%;
-        /* Expand the form container to full width on small screens */
-    }
 }
